syntax = "proto3";

package metrics_store;

// import path of the package which will contain all the generated code for this file
option go_package = "github.com/aridae/go-metrics-store/pkg/pb/metrics-store;metricsstore";

service MetricsStoreAPI {
  rpc GetMetric (GetMetricRequest) returns (GetMetricResponse);

  rpc GetAllMetricsList(GetAllMetricsListRequest) returns (GetAllMetricsListResponse);

  rpc UpsertMetric(UpsertMetricRequest) returns (UpsertMetricResponse);

  rpc UpsertMetricsBatch(UpsertMetricsBatchRequest) returns (UpsertMetricsBatchResponse);
}

message GetMetricRequest {
  string name = 1;
  MetricType type = 2;
}

message GetMetricResponse {
  Metric metric = 1;
}

message GetAllMetricsListRequest {}

message GetAllMetricsListResponse {
  repeated Metric metrics = 1;
}

message UpsertMetricRequest {
  Metric metric = 1;
}

message UpsertMetricResponse {
  Metric upserted_metric = 1;
}

message UpsertMetricsBatchRequest {
  repeated Metric metrics = 1;
}

message UpsertMetricsBatchResponse {
  repeated Metric upserted_metrics = 1;
}

message Metric {
  string name = 1;
  Value value = 2;

  message Value {
    oneof metric_value {
      Counter counter = 2;
      Gauge gauge = 3;
    }
  }
}

message Counter {
  int64 value = 1;
}

message Gauge {
  float value = 1;
}

enum MetricType {
  METRIC_TYPE_UNSPECIFIED = 0;
  METRIC_TYPE_COUNTER = 1;
  METRIC_TYPE_GAUGE = 2;
}